--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "http://localhost:63342/TonSite/",
     "name": "TON Vote",
-    "iconUrl": "http://localhost:63342/TonSite/ton_symbol.png"
+    "iconUrl": "https://github.com/matveyozick/tonsite/blob/main/ton_symbol.png"
 }
